frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend-svc
spec:
  type: LoadBalancer
  selector:
    app: notes-frontend
  ports:
  - port: 80
    targetPort: 80
